--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "viem": "^2.33.0"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.4",
