--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@neondatabase/serverless": "^1.0.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.4",
